--- a/external/demo_lib/build.gradle
+++ b/external/demo_lib/build.gradle
@@ -30,12 +30,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-publish{
-    userOrg = 'seekting'//bintray.com用户名
-    groupId = 'com.seekting'//jcenter上的路径
-    artifactId = 'demolib'//项目名称
-    publishVersion = '1.0.1'//版本号
-    desc = '这是一个demo的框架'//描述，不重要
-    website = 'https://github.com/seekting/demolib'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
+publish {
+    userOrg = USER_ORG//bintray.com用户名
+    groupId = GROUP_ID//jcenter上的路径
+    artifactId = ARTIFACTID//项目名称
+    publishVersion = PUBLISH_VERSION//版本号
+    desc = DESC//描述，不重要
+    website = WEBSITE //网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
 
