--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,14 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-PUBLISH_VERSION=1.0.2
+COMPILE_SDK_VERSION = 23
+BUILD_TOOLS_VERSION = 26.0.2
+
+PUBLISH_VERSION=1.0.3
 USER_ORG=seekting
 GROUP_ID = com.seekting
 ARTIFACTID=demolib
 DESC=这是一个demo的框架
 WEBSITE=https://github.com/seekting/demolib
+
+
