--- a/external/demo_lib/build.gradle
+++ b/external/demo_lib/build.gradle
@@ -15,8 +15,8 @@ android {
     buildToolsVersion project.BUILD_TOOLS_VERSION
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 15
+        minSdkVersion project.MIN_SDK_VERSION as int
+        targetSdkVersion project.TARGET_SDK_VERSION as int
         versionCode 1
         versionName "1.0"
 
