--- a/external/demo_lib/src/main/AndroidManifest.xml
+++ b/external/demo_lib/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <manifest package="com.seekting.demo_lib"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-                 android:supportsRtl="true"
+    <application
     >
 
         <activity android:name=".MainActivity">
