提交，更新key的上传

--- a/external/demo_lib/build.gradle
+++ b/external/demo_lib/build.gradle
@@ -1,6 +1,6 @@
 ext {
     bintrayUser = "seekting"
-    bintrayKey = System.getenv("bintrayKey")
+    bintrayKey = BINTRAYKEY
     dryRun = "false"
 }
 apply plugin: 'com.android.library'
